Harmonize FR/EN/IT content, remove placeholders, update fees and sections

--- a/cabinet-en.html
+++ b/cabinet-en.html
@@ -71,7 +71,7 @@
             <p class="meta">The firm focuses on pre-litigation coaching to help you make informed decisions about separation procedures.</p>
             <p class="meta">We support you to try to ease conflict and avoid contentious proceedings through six one-hour sessions (two sessions per month), seeking an amicable solution before litigation.</p>
             <p class="meta">We assist in finding solutions regarding personal consequences of separation (the couple and, above all, the children), financial consequences (child support, compensatory allowance) and the dissolution of matrimonial regimes.</p>
-            <p class="meta"><strong>Package:</strong> €130 per session (the sixth session is complimentary).</p>
+            <p class="meta"><strong>Package:</strong> €120 per session (the sixth session is free).</p>
           </div>
 
           <div class="hero-actions">
@@ -125,7 +125,7 @@
 
     <section class="section">
       <div class="container">
-        <h2>Points of method (to be completed)</h2>
+        <h2>Points of Method</h2>
         <div class="grid-3">
           <div class="card">
             <h3>Transparency</h3>
