--- a/cabinet-it.html
+++ b/cabinet-it.html
@@ -70,7 +70,7 @@
             <p class="meta">Lo studio privilegia un accompagnamento pre-contenzioso per consentirvi di prendere decisioni informate sulle procedure di separazione.</p>
             <p class="meta">Vi assistiamo per ridurre il conflitto ed evitare, se possibile, un contenzioso giudiziario, attraverso sei incontri di un’ora (due al mese), con l’obiettivo di trovare una soluzione amichevole prima dell’azione legale.</p>
             <p class="meta">L’assistenza riguarda le conseguenze personali della separazione (la coppia e soprattutto i figli), le conseguenze finanziarie (assegno di mantenimento, assegno compensativo) e lo scioglimento dei regimi patrimoniali.</p>
-            <p class="meta"><strong>Tariffa:</strong> 130 € a seduta (la sesta seduta è gratuita).</p>
+            <p class="meta"><strong>Pacchetto:</strong> 120€ a seduta (la sesta seduta è offerta).</p>
           </div>
 
           <div class="hero-actions">
