--- a/cabinet.html
+++ b/cabinet.html
@@ -71,7 +71,7 @@
             <p class="meta">Le Cabinet est orienté vers le coaching pré-contentieux afin de vous éclairer dans votre prise de décision relative à un processus de séparation judiciaire.</p>
             <p class="meta">Le Cabinet vous accompagne pour tenter d'apaiser le conflit et éviter la procédure contentieuse, par le biais de six séances d'une heure chacune (deux séances par mois), visant à rechercher une solution amiable avant toute procédure judiciaire.</p>
             <p class="meta">Le Cabinet aide à trouver une solution concernant les conséquences personnelles de la séparation (couple et surtout vis‑à‑vis des enfants), les conséquences financières (pension alimentaire, prestation compensatoire) ainsi que la liquidation du régime matrimonial.</p>
-            <p class="meta"><strong>Forfait :</strong> 130€ la séance (la sixième séance est offerte).</p>
+            <p class="meta"><strong>Forfait :</strong> 120€ la séance (la sixième séance est offerte).</p>
           </div>
 
           <div class="hero-actions">
@@ -125,7 +125,7 @@
 
     <section class="section">
       <div class="container">
-        <h2>Points de méthode (à compléter)</h2>
+        <h2>Points de méthode</h2>
         <div class="grid-3">
           <div class="card">
             <h3>Transparence</h3>
