--- a/contact-en.html
+++ b/contact-en.html
@@ -48,7 +48,7 @@
         <div>
           <div class="kicker">Contact</div>
           <strong>ALBERTIN-ROBY Mary</strong>
-          <p class="lead">You can contact the firm by phone, email, or using the form below.</p>
+          <p class="lead">You can contact the firm by phone, email, or via the form below.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="tel:+33660723599">Call</a>
             <a class="btn" href="mailto:albertinroby@bbox.fr">Send an email</a>
@@ -81,11 +81,12 @@
               <input id="tel" name="tel" type="tel" />
               <label for="objet"><strong>Subject</strong></label>
               <select id="objet" name="objet">
-                <option value="rdv">Appointment request</option>
+                <option value="">Select subject</option>
+                <option value="rendez-vous">Appointment</option>
                 <option value="divorce">Divorce / separation</option>
                 <option value="enfants">Children</option>
-                <option value="succession">Estate</option>
-                <option value="other">Other</option>
+                <option value="adoption">Adoption</option>
+                <option value="autre">Other</option>
               </select>
               <label for="message"><strong>Message</strong></label>
               <textarea id="message" name="message" rows="6" required></textarea>
