--- a/contact-it.html
+++ b/contact-it.html
@@ -51,7 +51,9 @@
         <div>
           <div class="kicker">Contatto</div>
           <strong>ALBERTIN-ROBY Mary</strong>
-          <p class="lead">È possibile contattare lo studio telefonicamente, via email o tramite il modulo sottostante.</p>
+          <p class="lead">
+            Potete contattare lo studio per telefono, email o tramite il modulo sottostante.
+          </p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="tel:+33660723599">Chiamare</a>
             <a class="btn" href="mailto:albertinroby@bbox.fr">Inviare un’email</a>
@@ -90,11 +92,12 @@
 
               <label for="objet"><strong>Oggetto</strong></label>
               <select id="objet" name="objet">
-                <option value="rdv">Richiesta di appuntamento</option>
+                <option value="">Seleziona l'oggetto</option>
+                <option value="rendez-vous">Appuntamento</option>
                 <option value="divorce">Divorzio / separazione</option>
                 <option value="enfants">Figli</option>
-                <option value="succession">Successione</option>
-                <option value="other">Altro</option>
+                <option value="adoption">Adozione</option>
+                <option value="autre">Altro</option>
               </select>
 
               <label for="message"><strong>Messaggio</strong></label>
