--- a/famille-en.html
+++ b/famille-en.html
@@ -102,11 +102,13 @@
         <h2>Areas of practice</h2>
         <div class="grid-3">
           <div class="card">
-            <h3>Divorce & separation</h3>
+            <h3>Divorce & Separation</h3>
             <ul class="list">
               <li>Amicable or contentious divorce (including 2021 reform)</li>
-              <li>Divorce by mutual consent via lawyer</li>
-              <li>End of cohabitation and PACS dissolution</li>
+              <li>Divorce by mutual consent by lawyer's deed</li>
+              <li>Legal separation</li>
+              <li>Termination of civil partnership (PACS)</li>
+              <li>Termination of cohabitation</li>
               <li>Provisional measures and post-separation arrangements</li>
             </ul>
           </div>
@@ -114,19 +116,17 @@
           <div class="card">
             <h3>Children</h3>
             <ul class="list">
-              <li>Residence and visitation arrangements</li>
-              <li>Parental authority: exercise, sharing, disputes</li>
-              <li>Child support and related obligations</li>
-              <li>Adoption</li>
+              <li>Residence, visitation and accommodation rights</li>
+              <li>Parental authority (exercise, sharing, disputes)</li>
+              <li>Maintenance obligations and child support</li>
             </ul>
           </div>
 
           <div class="card">
-            <h3>Estates</h3>
+            <h3>Adoption</h3>
             <ul class="list">
-              <li>Succession, division, co-ownership</li>
-              <li>Estate litigation and family disputes</li>
-              <li>Strategy, negotiation and support</li>
+              <li>Simple adoption petition</li>
+              <li>Full adoption petition</li>
             </ul>
           </div>
         </div>
@@ -173,7 +173,8 @@
           <div class="card">
             <h3>What documents should I bring?</h3>
             <p class="meta">
-              ID, proofs, relevant exchanges, prior decisions, and financial elements if applicable. A detailed list may be provided after the first contact.
+              ID document, civil status document, supporting documents, relevant correspondence, previous decisions, financial information if applicable.
+              A detailed list can be provided after the first contact.
             </p>
           </div>
         </div>
