--- a/famille-it.html
+++ b/famille-it.html
@@ -103,12 +103,13 @@
         <h2>Aree di intervento</h2>
         <div class="grid-3">
           <div class="card">
-            <h3>Divorzio & separazione</h3>
+            <h3>Divorzio e separazione</h3>
             <ul class="list">
-              <li>Divorzio consensuale o contenzioso (inclusa riforma 2021)</li>
-              <li>Divorzio per consenso reciproco tramite atto di avvocato</li>
+              <li>Divorzio amichevole o contenzioso (compresa la riforma 2021)</li>
+              <li>Divorzio consensuale mediante atto dell'avvocato</li>
+              <li>Separazione legale</li>
+              <li>Rottura del PACS</li>
               <li>Rottura della convivenza</li>
-              <li>Scioglimento del PACS</li>
               <li>Misure provvisorie e organizzazione post-separazione</li>
             </ul>
           </div>
@@ -116,19 +117,17 @@
           <div class="card">
             <h3>Figli</h3>
             <ul class="list">
-              <li>Residenza, diritto di visita</li>
-              <li>Responsabilità genitoriale (esercizio, condivisione, controversie)</li>
-              <li>Obblighi alimentari e assegno di mantenimento</li>
-              <li>Adozione</li>
+              <li>Residenza, diritto di visita e ospitalità</li>
+              <li>Autorità genitoriale (esercizio, condivisione, controversie)</li>
+              <li>Obblighi alimentari e mantenimento</li>
             </ul>
           </div>
 
           <div class="card">
-            <h3>Successioni</h3>
+            <h3>Adozione</h3>
             <ul class="list">
-              <li>Successione, divisione, comunione</li>
-              <li>Contenzioso successorio e conflitti familiari</li>
-              <li>Strategia, negoziazione e accompagnamento</li>
+              <li>Richiesta di adozione semplice</li>
+              <li>Richiesta di adozione plenaria</li>
             </ul>
           </div>
         </div>
@@ -166,7 +165,7 @@
 
     <section class="section">
       <div class="container">
-        <h2>Domande frequenti (placeholder)</h2>
+        <h2>Domande frequenti</h2>
         <div class="grid-2">
           <div class="card">
             <h3>Quanto tempo ci vuole?</h3>
@@ -178,7 +177,7 @@
           <div class="card">
             <h3>Quali documenti portare?</h3>
             <p class="meta">
-              Identità, giustificativi, scambi utili, decisioni precedenti, elementi finanziari se pertinenti.
+              Documento d'identità, documento di stato civile, documenti giustificativi, corrispondenza utile, decisioni precedenti, elementi finanziari se pertinenti.
               Un elenco dettagliato potrà essere fornito dopo il primo contatto.
             </p>
           </div>
