--- a/honoraires-en.html
+++ b/honoraires-en.html
@@ -67,17 +67,15 @@
           <div class="card">
             <h3>In-office consultation</h3>
             <p class="meta"><strong>180 €</strong></p>
-            <p class="meta">Deducted from the total cost of the procedure.</p>
           </div>
 
           <div class="card">
             <h3>Written consultation</h3>
             <p class="meta"><strong>220 €</strong></p>
-            <p class="meta">Deducted from the total cost, according to the fee agreement.</p>
           </div>
         </div>
 
-        <p class="meta" style="margin-top:1rem;">All services are subject to a prior fee agreement.</p>
+        <p class="meta" style="margin-top:1rem;">Any intervention is subject to a mandatory prior fee agreement.</p>
       </div>
     </section>
 
@@ -89,19 +87,16 @@
           <div class="card">
             <h3>Consultation</h3>
             <p class="meta">A first appointment allows analysis of the situation, identification of possible options, and definition of a strategy.</p>
-            <p class="meta"><strong>To be completed:</strong> rate / duration / terms.</p>
           </div>
 
           <div class="card">
             <h3>Flat fee</h3>
             <p class="meta">Suitable when the assignment is clearly delimited (e.g. a file with a stable scope).</p>
-            <p class="meta"><strong>To specify:</strong> what is included / excluded.</p>
           </div>
 
           <div class="card">
             <h3>Time spent</h3>
             <p class="meta">Billed according to an hourly rate, with tracking of work. Useful for evolving or uncertain matters.</p>
-            <p class="meta"><strong>To be completed:</strong> indicative hourly rate.</p>
           </div>
         </div>
       </div>
@@ -156,4 +151,3 @@
   </footer>
 </body>
 </html>
-*** End Patch
