--- a/honoraires-it.html
+++ b/honoraires-it.html
@@ -69,18 +69,16 @@
           <div class="card">
             <h3>Consulenza in studio</h3>
             <p class="meta"><strong>180 €</strong></p>
-            <p class="meta">Detratta dal costo complessivo della procedura.</p>
           </div>
 
           <div class="card">
             <h3>Consulenza scritta</h3>
             <p class="meta"><strong>220 €</strong></p>
-            <p class="meta">Detratta dal costo complessivo, secondo accordo sugli onorari.</p>
           </div>
         </div>
 
         <p class="meta" style="margin-top:1rem;">
-          Ogni intervento è oggetto di un accordo sugli onorari preliminare.
+          Ogni intervento è soggetto a una convenzione di onorari preliminare obbligatoria.
         </p>
       </div>
     </section>
@@ -96,7 +94,6 @@
               Un primo appuntamento consente di analizzare la situazione, individuare le opzioni possibili
               e definire una strategia.
             </p>
-            <p class="meta"><strong>Da completare:</strong> tariffa / durata / modalità.</p>
           </div>
 
           <div class="card">
@@ -104,7 +101,6 @@
             <p class="meta">
               Adatto quando l’incarico è ben delimitato (es.: pratica con perimetro stabile).
             </p>
-            <p class="meta"><strong>Da precisare:</strong> cosa è incluso / non incluso.</p>
           </div>
 
           <div class="card">
@@ -113,7 +109,6 @@
               Fatturazione secondo una tariffa oraria, con tracciamento delle attività.
               Utile per pratiche evolutive o incerte.
             </p>
-            <p class="meta"><strong>Da completare:</strong> tariffa oraria indicativa.</p>
           </div>
         </div>
       </div>
