--- a/honoraires.html
+++ b/honoraires.html
@@ -67,18 +67,16 @@
           <div class="card">
             <h3>Consultation au cabinet</h3>
             <p class="meta"><strong>180 €</strong></p>
-            <p class="meta">Déduite du coût global de la procédure.</p>
           </div>
 
           <div class="card">
             <h3>Consultation écrite</h3>
             <p class="meta"><strong>220 €</strong></p>
-            <p class="meta">Déduite du coût global, selon convention d’honoraires.</p>
           </div>
         </div>
 
         <p class="meta" style="margin-top:1rem;">
-          Toute intervention fait l’objet d’une convention d’honoraires préalable.
+          Toute intervention fait l'objet d'une convention d'honoraires préalable obligatoire.
         </p>
       </div>
     </section>
@@ -94,7 +92,6 @@
               Un premier rendez-vous permet d’analyser la situation, d’identifier les options possibles
               et de définir une stratégie.
             </p>
-            <p class="meta"><strong>À compléter :</strong> tarif / durée / modalités.</p>
           </div>
 
           <div class="card">
@@ -102,7 +99,6 @@
             <p class="meta">
               Adapté lorsque la mission est bien délimitée (ex : dossier avec périmètre stable).
             </p>
-            <p class="meta"><strong>À préciser :</strong> ce qui est inclus / non inclus.</p>
           </div>
 
           <div class="card">
@@ -111,7 +107,6 @@
               Facturation selon un taux horaire, avec suivi des diligences.
               Utile pour des dossiers évolutifs ou incertains.
             </p>
-            <p class="meta"><strong>À compléter :</strong> taux horaire indicatif.</p>
           </div>
         </div>
       </div>
