--- a/index-en.html
+++ b/index-en.html
@@ -65,6 +65,14 @@
     <section class="section">
       <div class="container">
         <h2>About</h2>
+        <p class="meta">Holder of a Master's degree in private law, judicial career track (University of Bordeaux) obtained in 1986, and a certificate in criminal sciences, Me ALBERTIN-ROBY was sworn in on January 1, 1991 and has been practicing at the Nice Bar for over thirty-five years.</p>
+        <p class="meta">Member of the Divorce France association, the Association of Family Law Practitioners at the Nice Bar (children's lawyer) and M.I.A (Real Estate Market for Lawyers).</p>
+      </div>
+    </section>
+
+    <section class="section" id="about">
+      <div class="container">
+        <h2>Law Firm in Nice</h2>
         <div class="grid-2">
           <div class="card">
             <p class="meta">Graduated with a law degree (Judicial Careers) from the University of Bordeaux in 1986 and a certificate in criminal sciences, Me ALBERTIN-ROBY was admitted to the bar on 1 January 1991 and has practiced at the Bar of Nice for over thirty-three years.</p>
@@ -79,35 +87,56 @@
       </div>
     </section>
 
+    <section class="section" id="divorce">
+      <div class="container">
+        <h2>Divorce and Separation</h2>
+        <p class="meta">
+          The firm assists you in all divorce and separation proceedings: divorce by mutual consent, judicial divorce, legal separation.
+          Support covers both procedural strategy and personal and financial consequences of the separation.
+        </p>
+        <ul class="list">
+          <li>Amicable or contentious divorce (including 2021 reform)</li>
+          <li>Divorce by mutual consent by lawyer's deed</li>
+          <li>Legal separation</li>
+          <li>Termination of cohabitation</li>
+          <li>Termination of civil partnership (PACS)</li>
+          <li>Provisional measures and post-separation arrangements</li>
+        </ul>
+      </div>
+    </section>
+
     <section class="section">
       <div class="container">
-        <h2>Areas of practice</h2>
-        <div class="grid-3">
-          <div class="card">
-            <h3>Divorce & separation</h3>
-            <ul class="list">
-              <li>Amicable or contentious divorce (including 2021 reform)</li>
-              <li>Divorce by mutual consent via lawyer</li>
-              <li>End of cohabitation (concubinage)</li>
-              <li>Dissolution of civil unions (PACS)</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Children</h3>
-            <ul class="list">
-              <li>Residence and visitation</li>
-              <li>Parental authority (exercise, sharing, disputes)</li>
-              <li>Child support and maintenance</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Estates</h3>
-            <ul class="list">
-              <li>Succession, division, co-ownership</li>
-              <li>Estate litigation and family disputes</li>
-              <li>Strategy, negotiation and support</li>
-            </ul>
-          </div>
+        <h2>Children, Parental Authority and Child Support</h2>
+        <div class="card">
+          <ul class="list">
+            <li>Residence, visitation and accommodation rights</li>
+            <li>Parental authority (exercise, sharing, disputes)</li>
+            <li>Maintenance obligations and child support</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2>Adoption</h2>
+        <div class="card">
+          <ul class="list">
+            <li>Simple adoption petition</li>
+            <li>Full adoption petition</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2>Need Initial Advice?</h2>
+        <p class="meta">For any question or to schedule a first appointment, do not hesitate to contact us by email or phone.</p>
+        <div class="hero-actions">
+          <a class="btn btn-primary" href="./contact-en.html">Contact</a>
+          <a class="btn" href="tel:+33660723599">Call the office</a>
         </div>
       </div>
     </section>
