--- a/index-it.html
+++ b/index-it.html
@@ -93,7 +93,22 @@
 
     <section class="section">
       <div class="container">
-        <h2>Chi sono</h2>
+        <h2>Presentazione</h2>
+        <p class="meta">
+          Titolare di una laurea magistrale in diritto privato, indirizzo carriera giudiziaria (Università di Bordeaux) conseguita nel 1986,
+          e di un certificato in scienze criminali, Me ALBERTIN-ROBY ha prestato giuramento il 1° gennaio 1991 ed esercita
+          presso l'Ordine degli Avvocati di Nizza da oltre trentacinque anni.
+        </p>
+        <p class="meta">
+          Membro dell'associazione Divorce France, dell'Associazione degli avvocati praticanti in diritto di famiglia presso l'Ordine degli Avvocati di Nizza
+          (avvocato del bambino) e del M.I.A (Mercato immobiliare degli avvocati).
+        </p>
+      </div>
+    </section>
+
+    <section class="section" id="about">
+      <div class="container">
+        <h2>Studio legale a Nizza</h2>
 
         <div class="grid-2">
           <div class="card">
@@ -129,78 +144,59 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section" id="divorce">
       <div class="container">
-        <h2>Aree di intervento</h2>
-
-        <div class="grid-3">
-          <div class="card">
-            <h3>Divorzio & separazione</h3>
-            <ul class="list">
-              <li>Divorzio consensuale o contenzioso (incl. riforma 2021)</li>
-              <li>Divorzio consensuale mediante atto di avvocato</li>
-              <li>Cessazione della convivenza</li>
-              <li>Scioglimento del PACS</li>
-              <li>Misure provvisorie e organizzazione post-separazione</li>
-            </ul>
-          </div>
-
-          <div class="card">
-            <h3>Figli</h3>
-            <ul class="list">
-              <li>Residenza, diritto di visita</li>
-              <li>Responsabilità genitoriale (esercizio, condivisione, contenziosi)</li>
-              <li>Obblighi di mantenimento e assegno di mantenimento</li>
-              <li>Adozione</li>
-            </ul>
-          </div>
-
-          <div class="card">
-            <h3>Successioni</h3>
-            <ul class="list">
-              <li>Successione, divisione, comunione</li>
-              <li>Contenziosi successori e conflitti familiari</li>
-              <li>Strategia, negoziazione e assistenza</li>
-            </ul>
-          </div>
-        </div>
+        <h2>Divorzio e separazione</h2>
+        <p class="meta">
+          Lo studio vi assiste in tutte le procedure di divorzio e separazione: divorzio consensuale, divorzio giudiziale, separazione legale.
+          L'assistenza riguarda sia la strategia processuale che le conseguenze personali e patrimoniali della rottura.
+        </p>
+        <ul class="list">
+          <li>Divorzio amichevole o contenzioso (compresa la riforma 2021)</li>
+          <li>Divorzio consensuale mediante atto dell'avvocato</li>
+          <li>Separazione legale</li>
+          <li>Rottura della convivenza</li>
+          <li>Rottura del PACS</li>
+          <li>Misure provvisorie e organizzazione post-separazione</li>
+        </ul>
       </div>
     </section>
 
     <section class="section">
       <div class="container">
-        <h2>Un metodo semplice e strutturato</h2>
-
-        <div class="grid-2">
-          <div class="card">
-            <h3>1) Analisi & strategia</h3>
-            <p class="meta">
-              Primo scambio, raccolta degli elementi utili, definizione di un obiettivo realistico e di una strategia adeguata.
-            </p>
-          </div>
-
-          <div class="card">
-            <h3>2) Attuazione</h3>
-            <p class="meta">
-              Negoziazione, atti, procedura se necessario e seguito fino alla decisione / all’accordo finale.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container">
+        <h2>Figli, autorità genitoriale e mantenimento</h2>
         <div class="card">
-          <h2>Hai bisogno di un primo parere?</h2>
-          <p class="meta">
-            Spiega brevemente la tua situazione: risponderò per proporre un appuntamento adeguato.
-          </p>
+          <ul class="list">
+            <li>Residenza, diritto di visita e ospitalità</li>
+            <li>Autorità genitoriale (esercizio, condivisione, controversie)</li>
+            <li>Obblighi alimentari e mantenimento</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-          <div class="hero-actions" style="margin-top:.8rem;">
-            <a class="btn btn-primary" href="./contact-it.html">Contattare lo studio</a>
-            <a class="btn" href="./famille-it.html">Vedere il dettaglio degli interventi</a>
-          </div>
+    <section class="section">
+      <div class="container">
+        <h2>Adozione</h2>
+        <div class="card">
+          <ul class="list">
+            <li>Richiesta di adozione semplice</li>
+            <li>Richiesta di adozione plenaria</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2>Hai bisogno di un primo parere?</h2>
+        <p class="meta">
+          Spiega brevemente la tua situazione: risponderò per proporre un appuntamento adeguato.
+        </p>
+
+        <div class="hero-actions" style="margin-top:.8rem;">
+          <a class="btn btn-primary" href="./contact-it.html">Contattare lo studio</a>
+          <a class="btn" href="./famille-it.html">Vedere il dettaglio degli interventi</a>
         </div>
       </div>
     </section>
