--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ ou d'un contentieux.
             <p class="meta">
 → <a href="/famille.html">Avocat en droit de la famille à Nice</a>
 </p>
-            <p class="meta">Titulaire d'une maîtrise en Droit, mention carrière judiciaire (Université de Bordeaux) obtenue en 1986, et d'un certificat de sciences criminelles, Me ALBERTIN-ROBY a prêté serment le 1er janvier 1991 et exerce au Barreau de Nice depuis plus de trente-trois ans.</p>
-            <p class="meta">Membre de l'association Divorce France, de l'Association des Avocats praticiens en Droit de la Famille au Barreau de Nice (Avocat de l'enfant), et de M.I.A (Marché immobilier des Avocats). Mandataire des transactions immobilières.</p>
+            <p class="meta">Titulaire d'une maîtrise en droit privé, mention carrière judiciaire (Université de Bordeaux) obtenue en 1986, et d'un certificat de sciences criminelles, Me ALBERTIN-ROBY a prêté serment le 1er janvier 1991 et exerce au Barreau de Nice depuis plus de trente-cinq ans.</p>
+            <p class="meta">Membre de l'association Divorce France, de l'Association des avocats praticiens en droit de la famille au Barreau de Nice (avocat de l'enfant) et du M.I.A (Marché immobilier des avocats).</p>
           </div>
           <aside class="card">
             <h3>Cabinets & contact</h3>
@@ -113,19 +113,35 @@ ou d'un contentieux.
       </div>
     </section>
 
-    <section class="section">
+    <section id="about" class="section">
+      <div class="container">
+        <h2>Cabinet d'avocat à Nice</h2>
+        <div class="grid-2">
+          <div class="card">
+            <p class="meta">
+Le cabinet est situé à <strong>Nice</strong>, 15 rue de l'Hôtel des Postes.
+Les consultations ont lieu exclusivement sur rendez-vous.
+Un premier échange permet de cadrer la situation et d'envisager
+les suites possibles.
+</p>
+            <p class="meta">Me ALBERTIN-ROBY a volontairement choisi d'exercer dans un cabinet à échelle humaine et travaille volontiers en équipe : elle s'adjoint si nécessaire les compétences complémentaires de notaires, agents immobiliers, et avocats spécialisés en droit des affaires et droit fiscal.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="divorce" class="section">
       <div class="container">
         <h2>Divorce et séparation</h2>
         <div class="card">
           <p class="meta">
-Le cabinet vous assiste dans toutes les procédures de divorce :
-divorce par consentement mutuel, divorce judiciaire, séparation de fait.
-L'accompagnement porte tant sur la stratégie procédurale que sur
-les conséquences personnelles et patrimoniales de la rupture.
+Le cabinet vous assiste dans l'ensemble des procédures de divorce et de séparation : divorce par consentement mutuel, divorce judiciaire, séparation de corps.
+L'accompagnement porte tant sur la stratégie procédurale que sur les conséquences personnelles et patrimoniales de la rupture.
 </p>
           <ul class="list">
             <li>Divorce amiable ou contentieux (y compris réforme 2021)</li>
             <li>Divorce par consentement mutuel par acte d'avocat</li>
+            <li>Séparation de corps</li>
             <li>Rupture de concubinage</li>
             <li>Rupture de PACS</li>
             <li>Mesures provisoires et organisation post-séparation</li>
@@ -144,10 +160,9 @@ liées à l'autorité parentale, à la résidence des enfants, au droit de visit
 et à la fixation ou la révision de la pension alimentaire.
 </p>
           <ul class="list">
-            <li>Résidence, droit de visite</li>
+            <li>Résidence, droit de visite et d'hébergement</li>
             <li>Autorité parentale (exercice, partage, litiges)</li>
             <li>Obligations alimentaires et pension alimentaire</li>
-            <li>Adoption</li>
           </ul>
         </div>
       </div>
@@ -155,25 +170,12 @@ et à la fixation ou la révision de la pension alimentaire.
 
     <section class="section">
       <div class="container">
-        <h2>Cabinet d'avocat à Nice</h2>
-        <div class="grid-2">
-          <div class="card">
-            <p class="meta">
-Le cabinet est situé à <strong>Nice</strong>, 15 rue de l'Hôtel des Postes.
-Les consultations ont lieu exclusivement sur rendez-vous.
-Un premier échange permet de cadrer la situation et d'envisager
-les suites possibles.
-</p>
-            <p class="meta">Me ALBERTIN-ROBY a volontairement choisi d'exercer dans un cabinet à échelle humaine et travaille volontiers en équipe : elle s'adjoint si nécessaire les compétences complémentaires de notaires, agents immobiliers, et avocats spécialisés en droit des affaires et droit fiscal.</p>
-          </div>
-          <div class="card">
-            <h3>Successions</h3>
-            <ul class="list">
-              <li>Succession, partage, indivision</li>
-              <li>Contentieux successoraux et conflits familiaux</li>
-              <li>Stratégie, négociation et accompagnement</li>
-            </ul>
-          </div>
+        <h2>Adoption</h2>
+        <div class="card">
+          <ul class="list">
+            <li>Requête en adoption simple</li>
+            <li>Requête en adoption plénière</li>
+          </ul>
         </div>
       </div>
     </section>
