--- a/famille.html
+++ b/famille.html
@@ -107,7 +107,8 @@
             <h3>Divorce & séparation</h3>
             <ul class="list">
               <li>Divorce amiable ou contentieux (y compris réforme 2021)</li>
-              <li>Divorce par consentement mutuel par acte d’avocat</li>
+              <li>Divorce par consentement mutuel par acte d'avocat</li>
+              <li>Séparation de corps</li>
               <li>Rupture de concubinage</li>
               <li>Rupture de PACS</li>
               <li>Mesures provisoires et organisation post-séparation</li>
@@ -117,19 +118,10 @@
           <div class="card">
             <h3>Enfants</h3>
             <ul class="list">
-              <li>Résidence, droit de visite</li>
+              <li>Résidence, droit de visite et d'hébergement</li>
               <li>Autorité parentale (exercice, partage, litiges)</li>
               <li>Obligations alimentaires et pension alimentaire</li>
               <li>Adoption</li>
-            </ul>
-          </div>
-
-          <div class="card">
-            <h3>Successions</h3>
-            <ul class="list">
-              <li>Succession, partage, indivision</li>
-              <li>Contentieux successoraux et conflits familiaux</li>
-              <li>Stratégie, négociation et accompagnement</li>
             </ul>
           </div>
         </div>
@@ -167,7 +159,7 @@
 
     <section class="section">
       <div class="container">
-        <h2>Questions fréquentes (placeholder)</h2>
+        <h2>Questions fréquentes</h2>
         <div class="grid-2">
           <div class="card">
             <h3>Combien de temps ça prend ?</h3>
@@ -179,7 +171,7 @@
           <div class="card">
             <h3>Quels documents apporter ?</h3>
             <p class="meta">
-              Identité, justificatifs, échanges utiles, décisions antérieures, éléments financiers si concernés.
+              Pièce d'identité, document d'état civil, pièces justificatives, échanges utiles, décisions antérieures, éléments financiers si concernés.
               Une liste détaillée pourra être fournie après le premier contact.
             </p>
           </div>
