Fix canonical URLs to production domain

--- a/cabinet-it.html
+++ b/cabinet-it.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="Approccio, esperienza e informazioni pratiche dello studio. Diritto di famiglia a Nizza." />
   <meta property="og:type" content="website" />
 
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/cabinet-it.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/cabinet-it.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/cabinet.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/cabinet-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/cabinet-it.html">
