--- a/contact-en.html
+++ b/contact-en.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Family Law Attorney in Nice</title>
   <meta name="description" content="Contact the firm: appointments, contact details, form." />
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/contact-en.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/contact-en.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/contact.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/contact-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/contact-it.html">
