--- a/index-en.html
+++ b/index-en.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Law Firm — Family Law Attorney in Nice</title>
   <meta name="description" content="Family law attorney in Nice: divorce, separation, children, estates. Appointments and contact." />
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/index-en.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/index-en.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/index.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/index-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/index-it.html">
