--- a/cabinet-en.html
+++ b/cabinet-en.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Le cabinet — Avocate en droit de la famille à Nice" />
   <meta property="og:description" content="Approach, background and practical information about the firm. Family law in Nice." />
   <meta property="og:type" content="website" />
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/cabinet-en.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/cabinet-en.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/cabinet.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/cabinet-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/cabinet-it.html">
