--- a/cabinet.html
+++ b/cabinet.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Le cabinet — Avocate en droit de la famille à Nice" />
   <meta property="og:description" content="Approche, parcours et informations pratiques du cabinet. Droit de la famille à Nice." />
   <meta property="og:type" content="website" />
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/cabinet.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/cabinet.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/cabinet.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/cabinet-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/cabinet-it.html">
