--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Contact — Avocate en droit de la famille à Nice" />
   <meta property="og:description" content="Prise de rendez-vous et coordonnées du cabinet." />
   <meta property="og:type" content="website" />
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/contact.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/contact.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/contact.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/contact-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/contact-it.html">
