--- a/famille-en.html
+++ b/famille-en.html
@@ -7,7 +7,7 @@
   <title>Family law — Attorney in Nice</title>
   <meta name="description" content="Family law in Nice: divorce, separation, children, maintenance, estates." />
 
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/famille-en.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/famille-en.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/famille.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/famille-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/famille-it.html">
