--- a/famille-it.html
+++ b/famille-it.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Diritto di famiglia — Avvocata a Nizza" />
   <meta property="og:description" content="Divorzio, separazione, figli, assegno di mantenimento, successioni. Diritto di famiglia a Nizza." />
   <meta property="og:type" content="website" />
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/famille-it.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/famille-it.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/famille.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/famille-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/famille-it.html">
