--- a/famille.html
+++ b/famille.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Avocat en droit de la famille à Nice – Me ALBERTIN Roby" />
   <meta property="og:description" content="Me ALBERTIN Roby, avocate en droit de la famille à Nice. Divorce, séparation, enfants, pension alimentaire." />
   <meta property="og:type" content="website" />
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/famille.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/famille.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/famille.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/famille-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/famille-it.html">
