--- a/index-it.html
+++ b/index-it.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="Diritto di famiglia a Nizza: divorzio, separazione, figli, successioni. Contatto e appuntamenti." />
   <meta property="og:type" content="website" />
 
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/index-it.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/index-it.html">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/index.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/index-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/index-it.html">
