--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Avocat en droit de la famille à Nice – Me ALBERTIN Roby" />
   <meta property="og:description" content="Me ALBERTIN Roby, avocate en droit de la famille à Nice. Divorce, séparation, enfants, pension alimentaire." />
   <meta property="og:type" content="website" />
-  <link rel="canonical" href="https://albertinroby-avocat.netlify.app/index.html">
+  <link rel="canonical" href="https://albertinroby-avocat.fr/">
   <link rel="alternate" hreflang="fr" href="https://albertinroby-avocat.netlify.app/index.html">
   <link rel="alternate" hreflang="en" href="https://albertinroby-avocat.netlify.app/index-en.html">
   <link rel="alternate" hreflang="it" href="https://albertinroby-avocat.netlify.app/index-it.html">
