--- a/famille.html
+++ b/famille.html
@@ -121,7 +121,6 @@
               <li>Résidence, droit de visite et d'hébergement</li>
               <li>Autorité parentale (exercice, partage, litiges)</li>
               <li>Obligations alimentaires et pension alimentaire</li>
-              <li>Adoption</li>
             </ul>
           </div>
         </div>
@@ -202,7 +201,7 @@
 <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
       </div>
       <div class="footer-links" aria-label="Liens de bas de page">
-        <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN Roby</a>
+        <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN-ROBY</a>
         <a href="./mentions-legales.html">Mentions légales</a>
         <a href="./confidentialite.html">Confidentialité</a>
       </div>
