--- a/index.html
+++ b/index.html
@@ -152,17 +152,15 @@ L'accompagnement porte tant sur la stratégie procédurale que sur les conséque
 
     <section class="section">
       <div class="container">
-        <h2>Enfants, autorité parentale et pension alimentaire</h2>
+        <h2>Enfants, autorité parentale et part contributive</h2>
         <div class="card">
           <p class="meta">
-Me ALBERTIN Roby vous conseille et vous représente pour les questions
-liées à l'autorité parentale, à la résidence des enfants, au droit de visite
-et à la fixation ou la révision de la pension alimentaire.
+Me ALBERTIN-ROBY vous conseille et vous représente pour les questions
+liées à l'exercice de l'autorité parentale :
 </p>
           <ul class="list">
             <li>Résidence, droit de visite et d'hébergement</li>
-            <li>Autorité parentale (exercice, partage, litiges)</li>
-            <li>Obligations alimentaires et pension alimentaire</li>
+            <li>Obligations alimentaires et part contributive</li>
           </ul>
         </div>
       </div>
@@ -201,7 +199,7 @@ et à la fixation ou la révision de la pension alimentaire.
 <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
       </div>
       <div class="footer-links" aria-label="Liens de bas de page">
-        <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN Roby</a>
+        <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN-ROBY</a>
         <a href="./mentions-legales.html">Mentions légales</a>
         <a href="./confidentialite.html">Confidentialité</a>
       </div>
