--- a/cabinet.html
+++ b/cabinet.html
@@ -167,7 +167,7 @@
 <a href="mailto:albertinroby@bbox.fr">albertinroby@bbox.fr</a></p>
       </div>
       <div class="footer-links" aria-label="Liens de bas de page">
-        <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN Roby</a>
+        <a href="/famille.html">Avocat en droit de la famille à Nice – Me ALBERTIN-ROBY</a>
         <a href="./mentions-legales.html">Mentions légales</a>
         <a href="./confidentialite.html">Confidentialité</a>
       </div>
