--- a/index.html
+++ b/index.html
@@ -190,6 +190,39 @@ liées à l'exercice de l'autorité parentale :
         </div>
       </div>
     </section>
+
+    <section class="section">
+      <div class="container">
+        <h2>Contact</h2>
+        <div class="card">
+          <form name="contact"
+                method="POST"
+                data-netlify="true"
+                netlify-honeypot="bot-field">
+
+            <input type="hidden" name="form-name" value="contact">
+
+            <p hidden>
+              <label>Don't fill this out: <input name="bot-field"></label>
+            </p>
+
+            <label>Nom</label>
+            <input type="text" name="nom" required>
+
+            <label>Email</label>
+            <input type="email" name="email" required>
+
+            <label>Téléphone</label>
+            <input type="tel" name="tel">
+
+            <label>Message</label>
+            <textarea name="message" required></textarea>
+
+            <button type="submit">Envoyer</button>
+          </form>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
